[workspace]
members = [
    "packages/app"
]
resolver = "2"

[workspace.package]
authors = [
    "DeMineArchiver"
]
license = "MIT"
homepage = "https://vibemechs.pages.dev/"
repository = "https://github.com/DeMineArchiver/vibemechs/"
edition = "2021"
# rust-version = "1.71"


[workspace.dependencies]
tauri = "1.4"
tauri-build = "1.4"
serde = "1.0"
serde_json = "1.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
cfg-if = "1"
